# miniregexviz

./: README.md  cursed_placeholder_stuff.py  main.py  pyproject.toml
src/: cursed.py  flat_regex_ast.py  gui.py  lexer_parser.py  matcher.py  regex_ast.py
