[project]
name = "miniregexviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501", "PLR0912", "C901", "PLR0915", "FBT001",  # I like my spaghetti
    "D",  # I'll document as I want to
    "ANN", "RET",  # Type checker will complain if I need more annotations
    "TRY003", "EM101", "FBT003", "EM102",  # Stupid rule
    "ERA001",  # Still in-dev
    "A002",  # I like shadowing input
    "COM812",  # Formatter conflict
]

[tool.ruff.lint.per-file-ignores]
"main.py" = [
    "T201", "T100"  # Ignore these in main since print and breakpoint are needed for the CLI to work
]
